try to migrate from octopress to jekyll

--- a/index.html
+++ b/index.html
@@ -1,10 +1,5 @@
 <!DOCTYPE html>
-<!--[if IEMobile 7 ]><html class="no-js iem7"><![endif]-->
-<!--[if lt IE 9]><html class="no-js lte-ie8"><![endif]-->
-<!--[if (gt IE 8)|(gt IEMobile 7)|!(IEMobile)|!(IE)]><!-->
 <html class="no-js" lang="en">
-<!--<![endif]-->
-
 <head>
     <meta charset="utf-8">
     <title>zxhfirefox&#8217;s Blog</title>
@@ -14,7 +9,7 @@
     <meta name="MobileOptimized" content="320">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <link rel="canonical" href="http://zxhfirefox.github.io">
+    <link rel="canonical" href="https://zxhfirefox.github.io">
     <link href="/favicon.png" rel="icon">
     <link href="/stylesheets/screen.css" media="screen, projection" rel="stylesheet" type="text/css">
     <link href="/atom.xml" rel="alternate" title="zxhfirefox's Blog" type="application/atom+xml">
@@ -44,13 +39,10 @@
     <header role="banner">
         <hgroup>
             <h1><a href="/">zxhfirefox&#8217;s Blog</a></h1>
-
-            <h2>A place to record some words.</h2>
-
+            <h2>A place to record some words about coding and life.</h2>
         </hgroup>
     </header>
     <nav role="navigation">
-
         <ul class="main-navigation">
             <li><a href="/">Blog</a>
             </li>
@@ -63,9 +55,6 @@
     <div id="main">
         <div id="content">
             <div class="blog-index">
-
-
-
                 <article>
 
                     <header>
@@ -417,7 +406,7 @@
     </div>
     <footer role="contentinfo">
         <p>
-            Copyright &copy; 2015 - zxhfirefox
+            Copyright &copy; 2017 - zxhfirefox
         </p>
     </footer>
 </body>
