--- a/404.html
+++ b/404.html
@@ -1,5 +1,5 @@
 ---
-layout: default
+layout: page
 ---
 
 <style type="text/css" media="screen">
@@ -18,7 +18,5 @@ layout: default
 
 <div class="container">
   <h1>404</h1>
-
-  <p><strong>Page not found :(</strong></p>
-  <p>The requested page could not be found.</p>
+  <p><strong>Can not find what you are looking.</strong></p>
 </div>
