--- a/404.html
+++ b/404.html
@@ -2,21 +2,5 @@
 layout: page
 ---
 
-<style type="text/css" media="screen">
-  .container {
-    margin: 10px auto;
-    max-width: 600px;
-    text-align: center;
-  }
-  h1 {
-    margin: 30px 0;
-    font-size: 4em;
-    line-height: 1;
-    letter-spacing: -1px;
-  }
-</style>
-
-<div class="container">
-  <h1>404</h1>
-  <p><strong>Can not find what you are looking.</strong></p>
-</div>
+<h1>404</h1>
+<p><strong>Can not find what you are looking for.</strong></p>
